2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-04  Vin Shelton  <acs@xemacs.org>

	* lread.c (check_if_suppressed, check_if_suppressed):
	EXTERNAL_LIST_LOOP_2 declares variables and must be enclosed in
	braces.  Thanks, Fabrice.

2005-02-03  David Evers  <extsw@appliedgenerics.com>

	* process-unix.c (unix_send_process): Flush the last chunk, even
	when the pipe is blocked.

2005-02-03  Ben Wing  <ben@xemacs.org>

	* dumper.c:
	* dumper.c (pdump_file_try):
	* dumper.c (DUMP_SLACK):
	* dumper.c (pdump_load):
	Include extra DUMP_SLACK when allocating space for exe path.
	
	* glyphs-eimage.c:
	Reformat comment.

	* sysproc.h:
	Delete out-of-date comment about abort.

2005-02-03  Jerry James  <james@xemacs.org>

	* dumper.c (pdump_load_finish): Cast to Rawbyte * instead of char *.

2005-02-03  Jerry James  <james@xemacs.org>

	* config.h.in: Remove #define this c_this.
	* device-x.c (construct_name_list): Rename this -> this_widget.
	* eval.c (wants_debugger): Rename this -> curr.
	* frame.c (delete_frame_internal): Rename this -> this_frame.
	* gui-gtk.c (ungcpro_popup_callbacks): Rename this -> this_callback.
	* gui-gtk.c (get_gcpro_popup_callbacks): Ditto.
	* gui-x.c (gcpro_popup_callbacks): Ditto.
	* gui-x.c (ungcpro_popup_callbacks): Ditto.
	* lisp.h: Remove #undef this and #defin this c_this.
	* redisplay.c (generate_fstring_runes): Rename this -> this_str.

2005-02-01  Jerry James  <james@xemacs.org>

	* dumper.c: Olivier Galibert's changes to enable dumping data via
	a Java-like serialization/deserialization process.

	* number.c: OG's bignum conversion functions.  Also, use the
	dumping capability to initialize bigfloat-max-prec sanely.

	* alloc.c:
	* buffer.c:
	* bytecode.c:
	* console.c:
	* data.c:
	* device.c:
	* elhash.c:
	* eval.c:
	* events.c:
	* extents.c:
	* file-coding.c:
	* frame.c:
	* glyphs.c:
	* lstream.c:
	* marker.c:
	* mule-charset.c:
	* mule-coding.c:
	* objects.c:
	* profile.c: